cabal-version: 2.4

name: libh2na
version: 0

library
  build-depends:
    base,
    bytestring,
    cryptonite,
    foldl,
    memory,
    text,
    transformers

  default-extensions:
    LambdaCase
    OverloadedStrings
    ScopedTypeVariables
    StrictData
    TypeApplications
    ViewPatterns

  exposed-modules:
    H2NA.Hash
    H2NA.Password
    H2NA.PublicKey
    H2NA.SecretBox
    H2NA.SecretKey

  ghc-options:
    -Wall

  hs-source-dirs:
    src

  other-modules:
    H2NA.Internal

executable bench
  buildable:
    False

  build-depends:
    base,
    bytestring,
    chronos-bench,
    cryptonite,
    libh2na,
    memory,

  default-language:
    Haskell2010

  ghc-options:
    -O
    -threaded
    -rtsopts
    "-with-rtsopts=-N4"

  hs-source-dirs:
    bench

  main-is:
    Main.hs
