cabal-version: 2.4

name: libh2na
version: 0

common common
  build-depends:
    base

  default-extensions:
    BlockArguments
    DerivingStrategies
    GeneralizedNewtypeDeriving
    LambdaCase
    OverloadedStrings
    ScopedTypeVariables
    StrictData
    TypeApplications
    ViewPatterns

  default-language:
    Haskell2010

  ghc-options:
    -Wall

library
  import:
    common

  build-depends:
    bytestring,
    cryptonite,
    foldl,
    list-transformer ^>= 1.0,
    memory,
    text,
    transformers,

  exposed-modules:
    H2NA.Encoding
    H2NA.Hash
    H2NA.Password
    H2NA.PublicKey
    H2NA.SecretBox
    H2NA.SecretKey

  hs-source-dirs:
    src

  other-modules:
    H2NA.Internal

test-suite tests
  import:
    common

  build-depends:
    bytestring,
    hedgehog ^>= 1.0,
    libh2na,
    tasty,
    tasty-hedgehog ^>= 1.0,
    text,

  hs-source-dirs:
    test

  main-is:
    Main.hs

  type:
    exitcode-stdio-1.0

executable bench
  buildable:
    False

  build-depends:
    base,
    bytestring,
    chronos-bench,
    cryptonite,
    libh2na,
    memory,

  default-language:
    Haskell2010

  ghc-options:
    -O
    -threaded
    -rtsopts
    "-with-rtsopts=-N4"

  hs-source-dirs:
    bench

  main-is:
    Main.hs
