cabal-version: 2.4

name: libh2na
version: 0

common common
  build-depends:
    base

  default-extensions:
    BlockArguments
    DataKinds
    DerivingStrategies
    GeneralizedNewtypeDeriving
    KindSignatures
    LambdaCase
    OverloadedStrings
    ScopedTypeVariables
    StrictData
    TypeApplications
    ViewPatterns

  default-language:
    Haskell2010

  ghc-options:
    -Wall

library
  import:
    common

  build-depends:
    bytestring,
    cryptonite,
    foldl,
    list-transformer ^>= 1.0,
    memory,
    text,
    transformers,

  exposed-modules:
    H2NA

  hs-source-dirs:
    src

  other-modules:
    H2NA.Internal.AEAD
    H2NA.Internal.Decrypt
    H2NA.Internal.DiffieHellmanSecret
    H2NA.Internal.Encoding
    H2NA.Internal.Encrypt
    H2NA.Internal.Hash
    H2NA.Internal.KDF
    H2NA.Internal.Password
    H2NA.Internal.PseudoRandomMaterial
    H2NA.Internal.PublicKey
    H2NA.Internal.SecretKey
    H2NA.Internal.Sign
    H2NA.Internal.Signature

test-suite tests
  import:
    common

  build-depends:
    bytestring,
    hedgehog ^>= 1.0,
    foldl,
    libh2na,
    list-transformer,
    tasty,
    tasty-hedgehog ^>= 1.0,
    text,
    transformers,

  hs-source-dirs:
    test

  main-is:
    Main.hs

  type:
    exitcode-stdio-1.0

executable bench
  buildable:
    False

  build-depends:
    base,
    bytestring,
    chronos-bench,
    cryptonite,
    libh2na,
    memory,

  default-language:
    Haskell2010

  ghc-options:
    -O
    -threaded
    -rtsopts
    "-with-rtsopts=-N4"

  hs-source-dirs:
    bench

  main-is:
    Main.hs
